logs/validate.20260326-060418.log
error[E0433]: failed to resolve: could not find `OrderedSetStPer` in `Chap43`
  --> src/Chap43/Example43_1.rs:13:24
   |
13 |     use crate::Chap43::OrderedSetStPer::OrderedSetStPer::*;
   |                        ^^^^^^^^^^^^^^^ could not find `OrderedSetStPer` in `Chap43`

error[E0432]: unresolved import `crate::OrderedSetStPerLit`
  --> src/Chap43/Example43_1.rs:14:9
   |
14 |     use crate::OrderedSetStPerLit;
   |         ^^^^^^^------------------
   |         |      |
   |         |      help: a similar name exists in the module: `OrderedSetStEphLit`
   |         no `OrderedSetStPerLit` in the root

error[E0425]: cannot find type `OrderedSetStPer` in this scope
  --> src/Chap43/Example43_1.rs:33:20
   |
33 |         let set_a: OrderedSetStPer<String> = OrderedSetStPerLit![
   |                    ^^^^^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find type `OrderedSetStPer` in this scope
   --> src/Chap43/Example43_1.rs:179:22
    |
179 |         let int_set: OrderedSetStPer<i32> = OrderedSetStPerLit![1, 3, 5, 7, 9, 11, 13];
    |                      ^^^^^^^^^^^^^^^ not found in this scope

error[E0433]: failed to resolve: use of undeclared type `OrderedSetStPer`
   --> src/Chap43/Example43_1.rs:160:26
    |
160 |         let joined_set = OrderedSetStPer::join(&left_split, &right_split);
    |                          ^^^^^^^^^^^^^^^ use of undeclared type `OrderedSetStPer`

error: aborting due to 5 previous errors

Some errors have detailed explanations: E0425, E0432, E0433.
For more information about an error, try `rustc --explain E0425`.
Elapsed: 9s
